--- a/07 - Array Cardio Day 2/index-START.html
+++ b/07 - Array Cardio Day 2/index-START.html
@@ -26,16 +26,34 @@
 
     // Some and Every Checks
     // Array.prototype.some() // is at least one person 19 or older?
+    const someOlder = people.some(function(person){
+      return (new Date).getFullYear() - person.year >= 19;
+    })
+
     // Array.prototype.every() // is everyone 19 or older?
+    const allOlder = people.every(function(person){
+      return (new Date).getFullYear() - person.year >= 19;
+    })
 
     // Array.prototype.find()
     // Find is like filter, but instead returns just the one you are looking for
     // find the comment with the ID of 823423
+    const theOne = comments.find(comment => {
+      return comment.id === 823423;
+    })
+
 
     // Array.prototype.findIndex()
     // Find the comment with this ID
     // delete the comment with the ID of 823423
+    const theIndex = comments.findIndex(comment => {
+      return comment.id === 823423;
+    })
 
-  </script>
+    comments.splice(theIndex, 1);
+    console.log(comments);
+
+
+    </script>
 </body>
 </html>
